<resources>
    <string name="app_name" translatable="false">FridaHooker</string>
    <string name="app_status">Frida 状态</string>
    <string name="frida_missing">frida server %1$s 缺失</string>
    <string name="frida_ready">frida server %1$s 就绪</string>
    <string name="manage">管理</string>
    <string name="image_status" translatable="false">image_status</string>
    <string name="android_ver">系统版本: Android %1$s ( API %2$d )</string>
    <string name="frida_ver">Frida版本切换: </string>
    <string name="hint">Hint：请选择正确版本的xz文件。 </string>
    <string name="device_name">设备名称: %1$s</string>
    <string name="device_abi">体系结构: %1$s</string>
    <string name="frida_path">Frida路径: %1$s</string>
    <string name="refresh">刷新</string>
    <string name="settings">配置设置</string>
    <string name="about">关于 FridaHooker</string>
    <string name="gplv2">本程序是自由软件，您可以根据由自由软件基金会出版 GNU 通用公共许可证第2版的条款和条件重新分发和/或修改它。\n发布本程序只是希望它对您有用，但不包含任何保证，甚至没有对适合特定用途的隐含保证。\n有关详细信息，请参阅 GNU 通用公共许可证。\n\n获取源代码: https://github.com/icespite/FridaHooker</string>
    <string name="local_use">启用本地模式</string>
    <string name="debug_mode">显示调试日志</string>
    <string name="need_permissions">需要权限</string>
    <string name="need_permissions_content">此应用使用电话权限读取手机信息并选择正确版本的frida，使用存储权限读取外部存储中的frida文件用于安装。如果您拒绝这些权限，程序将退出。</string>
    <string name="warnings">警告</string>
    <string name="unsupported_device">frida server在此设备上暂不支持\n可能的原因\n1. API级别不受支持 (暂不支持Android R或更高版本)\n2. 体系结构不受支持 (仅支持arm, arm64, x86, x86_64)</string>
    <string name="close">关闭</string>
    <string name="operation_failed_message">未能完成操作，请报告一个错误</string>
    <string name="install">安装</string>
    <string name="remove">移除</string>
    <string name="install_from_sdcard">从存储安装</string>
</resources>
